[package]
authors = ["Max Inden <mail@max-inden.de>"]
description = "The Rust SDK for developing Testground test plans."
documentation = "https://docs.rs/testground"
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "testground"
repository = "https://github.com/testground/sdk-rust/"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10", features = [ "attributes" ] }
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
soketto = "0.7.1"
thiserror = "1"
