[package]
authors = ["Max Inden <mail@max-inden.de>"]
description = "The Rust SDK for developing Testground test plans."
documentation = "https://docs.rs/testground"
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "testground"
repository = "https://github.com/testground/sdk-rust/"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", default-features = false, features = ["std", "derive", "env"] }
futures = { version = "0.3", default-features = false, features = [] }
influxdb = { version = "0.5", default-features = false, features = ["reqwest", "serde", "serde_json", "derive"] }
ipnetwork = { version = "0.19.0", default-features = false, features = ["serde"] }
log = "0.4"
soketto = { version = "0.7", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_repr = "0.1.7"
serde_with = { version = "1", default-features = false, features = [] }
thiserror = { version = "1", default-features = false, features = [] }
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
